# 2D-sim-res

./: .gitignore  README.md
Simulation SCC Day3 CPP/: README.md
Simulation SCC Day3 CPP/algo/: pattern.h  pde.h
Simulation SCC Day3 CPP/collection/: collection.h
Simulation SCC Day3 CPP/sample/: scc.cpp
Simulation SCC Day3 CPP/seed/: sample.cpp  seed.h
Simulation results of SCC invasion/: README.md
Simulation results of SCC invasion (2nd experiment)/: README.md
Simulation results of SCC invasion (2nd experiment)/Day 3 simulations/: README.md
Simulation results of SCC invasion (2nd experiment)/SCC patterns processing/: README.md
Simulation results of SCC invasion (2nd experiment)/SCC posteriors/: Post_process.m
Simulation results of SCC invasion (3rd experiment)/: README.md
Simulation results of SCC invasion (3rd experiment)/Average results/: .Rhistory  ESS_BW_plot.m  PDE 2D ABC functions adjusted SCC (time-dependent parameters).R  Posterior results summary.R  README.md  Run 3 ESS BW.txt  SCC time varying final parameter estimates non err calib.rds  dm constant regression model.rds  dn quadratic regression model.rds  eta quadratic regression model.rds  paras r8 average result run 1.rds
Simulation results of T98G glioma spheroid invasion/: README.md
Simulation_SCC_Day3_CPP/: CMakeLists.txt  README.md  config.h
Simulation_SCC_Day3_CPP/sample/: sample.h
c_src/: CMakeLists.txt  Makefile  config.h  debug.md  main.c  parameters.h
c_src/algo/: algo.h  calculate_scc.c  generate_pattern.c  pars.c  pde.c  proliferation.c
c_src/algorithm/: Makefile  calculate_scc.c  gen_pattern.c  pars.c  pattern.c  pattern.h  scc.h
c_src/collection/: arraylist.c  collection.c  collection.h
c_src/matrix/: matrix.c  matrix.h
c_src/seed/: sample.c  seed.c  seed.h
c_src/util/: Makefile
c_src/util/collection/: arrayList.c  collection.c  collection.h
c_src/util/math/: math_ext.h  runif.c  sample.c  seed.c  seq.c  sort.c
c_src/util/matrix/: matrix.c  matrix.h
cpp_src/: CMakeLists.txt  config.h  debug.md  main.cpp
cpp_src/algo/: calculate.h  calculate_sse.cpp  calculate_sse.h  generate_pattern.cpp  generate_pattern.h  pars.h  pattern.h  pde.h  scc.h  sim2d.h  solve_pde.cpp  solve_pde.h
cpp_src/collection/: collection.h  matrix.h  matrix_ext.h
cpp_src/ref_den/: ref_den.h  t3_ref_den.h
cpp_src/sample/: sample.h  scc.cpp
cpp_src/seed/: nrom.cpp  sample.cpp  seed.cpp  seed.h
(+144337 files in other folders)
